# MailMind

./: README.md  main.py  pyproject.toml
